--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx", "jest.config.js", "jest.config.js", "jest-setup.js"]
 }
